--- a/BackBazar/src/main/resources/application.properties
+++ b/BackBazar/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.application.name=BackBazar
-
 spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://localhost:3306/backbazar?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://demo:3306/prueba_jpa?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER_NAME}
 spring.datasource.password=${DB_PASSWORD}
